// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm should render 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="contact-form__name-input"
            name="name"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                value=""
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <label
                for="downshift-0-input"
                id="downshift-0-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                …
              </div>
              <div
                class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-0-menu"
                    aria-labelledby="downshift-0-label"
                    autocomplete="off"
                    class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                    data-testid="SelectDropdownInput__input"
                    id="downshift-0-input"
                    name="network"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="py-2 px-1 flex items-center justify-center"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdfBwQ gLRWTb transition-transform text-theme-secondary-500"
                        height="5"
                        width="7"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="downshift-0-label"
                class="styles__SelectOptionsList-b2falt-0 ghEDCU"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ w-full"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex w-full pt-8 border-t border-theme-secondary-300 dark:border-theme-secondary-800 justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm should render with errors 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-invalid="true"
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="contact-form__name-input"
            name="name"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        >
          <span
            data-errortext="Contact name error"
            data-testid="Input__error"
          >
            <div
              class="sc-bdfBwQ iyevwF text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </span>
        </div>
      </div>
    </fieldset>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="network"
        >
          Cryptoasset
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                value=""
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-3-menu"
              role="combobox"
            >
              <label
                for="downshift-3-input"
                id="downshift-3-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                …
              </div>
              <div
                class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-3-menu"
                    aria-labelledby="downshift-3-label"
                    autocomplete="off"
                    class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                    data-testid="SelectDropdownInput__input"
                    id="downshift-3-input"
                    name="network"
                    placeholder="Enter a cryptoasset name"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="py-2 px-1 flex items-center justify-center"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdfBwQ gLRWTb transition-transform text-theme-secondary-500"
                        height="5"
                        width="7"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="downshift-3-label"
                class="styles__SelectOptionsList-b2falt-0 ghEDCU"
                id="downshift-3-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        data-testid="ContactForm__address"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="contact-form__address-input"
              name="address"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        class="mt-4"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ w-full"
          data-testid="contact-form__add-address-btn"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Add Address
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex w-full pt-8 border-t border-theme-secondary-300 dark:border-theme-secondary-800 justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Cancel
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
